Switch to UTF-8

--- a/casestudies/124/casestudy/www/layout/case_id_124.html
+++ b/casestudies/124/casestudy/www/layout/case_id_124.html
@@ -3,12 +3,12 @@
 
 
 <head>
-  <title>Côte Sud Initiative: Integrated Development in Haiti | Côte Sud Initiative: Integrated Development in Haiti
+  <title>CÃ´te Sud Initiative: Integrated Development in Haiti | CÃ´te Sud Initiative: Integrated Development in Haiti
 	- A Journalism Case Study
 
   </title>
  
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 
@@ -92,7 +92,7 @@ font-style:italic;
 <table border="0" cellspacing="0" cellpadding="0">
 	<tr>
 		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_124.html" title="Home"><span>Côte Sud Initiative: Integrated Development in Haiti</span></a></h1>						</td>
+		<h1 class='site-name'><a href="case_id_124.html" title="Home"><span>CÃ´te Sud Initiative: Integrated Development in Haiti</span></a></h1>						</td>
 		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
 	</tr>
 
@@ -243,7 +243,7 @@ font-style:italic;
 		
 		
 		</div>		
-		<h1 class="title">Côte Sud Initiative: Integrated Development in Haiti</h1>
+		<h1 class="title">CÃ´te Sud Initiative: Integrated Development in Haiti</h1>
 		
 		
 		
