--- a/casestudies/124/casestudy/www/layout/case_id_124_id_850.html
+++ b/casestudies/124/casestudy/www/layout/case_id_124_id_850.html
@@ -3,12 +3,12 @@
 
 
 <head>
-  <title>Introduction | Côte Sud Initiative: Integrated Development in Haiti
+  <title>Introduction | CÃ´te Sud Initiative: Integrated Development in Haiti
 	- A Journalism Case Study
 
   </title>
  
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 
@@ -295,7 +295,7 @@ font-style:italic;
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
 
 
-<a href="case_id_124.html" class="page-previous" title="Go to previous page">&#171;&#160;Côte Sud Initiative: Integrated Development in Haiti</a>
+<a href="case_id_124.html" class="page-previous" title="Go to previous page">&#171;&#160;CÃ´te Sud Initiative: Integrated Development in Haiti</a>
 
 <a href="case_id_124_id_851.html" class="page-next" title="Go to next page">International development comes to Haiti&#160;&#187;</a>
 
