--- a/casestudies/124/casestudy/www/layout/case_id_124_id_851.html
+++ b/casestudies/124/casestudy/www/layout/case_id_124_id_851.html
@@ -5,7 +5,7 @@
    International development comes to Haiti | Côte Sud Initiative: Integrated Development in Haiti
 	- A Journalism Case Study
   </title>
-  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
    <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
    <style media="all" type="text/css">
     @import "css_global/book/book.css";
@@ -213,13 +213,13 @@ font-style:italic;
        </span>
        <div class="content">
         <p>
-         Despite Haiti’s rich cultural history and prime Caribbean beaches, the country remained trapped in a perverse web: poverty, natural disasters, political instability and environmental degradation. In the mid-2000s, over half of its 10 million people lived on less than $1 per day, and 80 percent lived on less than $2 per day.
+         Despite Haiti's rich cultural history and prime Caribbean beaches, the country remained trapped in a perverse web: poverty, natural disasters, political instability and environmental degradation. In the mid-2000s, over half of its 10 million people lived on less than $1 per day, and 80 percent lived on less than $2 per day.
          <sup>
           <a href="case_id_124_id_851.html#_ftn1" name="_ftnref1" title="">
            [4]
           </a>
          </sup>
-         Forty-six percent of Haitians didn’t have enough to eat, fewer than one in 50 finished secondary school, and less than 4 percent of the nation’s land remained forested.
+         Forty-six percent of Haitians didn't have enough to eat, fewer than one in 50 finished secondary school, and less than 4 percent of the nationÂ’s land remained forested.
          <sup>
           <a href="case_id_124_id_851.html#_ftn2" name="_ftnref2" title="">
            [5]
@@ -245,28 +245,28 @@ font-style:italic;
         </p>
         <blockquote>
          <p>
-          1.     Eradicate extreme poverty and hunger
+          1. Eradicate extreme poverty and hunger
          </p>
          <p>
-          2.     Achieve universal primary education
+          2. Achieve universal primary education
          </p>
          <p>
-          3.     Promote gender equality and empower women
+          3. Promote gender equality and empower women
          </p>
          <p>
-          4.     Reduce child mortality
+          4. Reduce child mortality
          </p>
          <p>
-          5.     Improve maternal health
+          5. Improve maternal health
          </p>
          <p>
-          6.     Combat HIV/AIDS, malaria and other diseases
+          6. Combat HIV/AIDS, malaria and other diseases
          </p>
          <p>
-          7.     Ensure environmental sustainability
+          7. Ensure environmental sustainability
          </p>
          <p>
-          8.     Develop a global partnership for development
+          8. Develop a global partnership for development
          </p>
         </blockquote>
         <div style="float:right;padding:10px">
@@ -277,7 +277,7 @@ font-style:italic;
          </p>
         </div>
         <p>
-         In 2002, the UN Secretary-General commissioned a design for achieving the goals and, in 2005, an advisory body recommended that programs to reach the goals be implemented first in individual villages, and then scaled up. The Millennium Village Project (MVP) was created to target a small number of impoverished African villages with multi-sector programs—in health, education, the environment, and the economy. This integrated approach addressed the reality that all sectors were interconnected. For example, schools often delivered nutrition and health care services, while reliable energy and clean water were critical to health clinics. As of 2012, there were 14 so-called Millennium Villages across sub-Saharan Africa.
+         In 2002, the UN Secretary-General commissioned a design for achieving the goals and, in 2005, an advisory body recommended that programs to reach the goals be implemented first in individual villages, and then scaled up. The Millennium Village Project (MVP) was created to target a small number of impoverished African villages with multi-sector programsÂ—in health, education, the environment, and the economy. This integrated approach addressed the reality that all sectors were interconnected. For example, schools often delivered nutrition and health care services, while reliable energy and clean water were critical to health clinics. As of 2012, there were 14 so-called Millennium Villages across sub-Saharan Africa.
          <sup>
           <a href="case_id_124_id_851.html#_ftn4" name="_ftnref4" title="">
            [7]
@@ -290,7 +290,7 @@ font-style:italic;
            MDGs to Haiti.
           </em>
          </strong>
-         As early as May 2006, Haitian President René Preval had asked Earth Institute (EI) Director Jeffrey Sachs to advise his government on how to achieve the Millennium Development Goals. Specifically, Preval asked Sachs to help create the first Millennium Village in the western hemisphere.
+         As early as May 2006, Haitian President Ren&eacute; Preval had asked Earth Institute (EI) Director Jeffrey Sachs to advise his government on how to achieve the Millennium Development Goals. Specifically, Preval asked Sachs to help create the first Millennium Village in the western hemisphere.
          <sup>
           <a href="case_id_124_id_851.html#_ftn5" name="_ftnref5" title="">
            [8]
@@ -311,7 +311,7 @@ font-style:italic;
            [10]
           </a>
          </sup>
-         Reaching the Millennium Development Goals required governments to undertake projects across sectors—health, education, energy, agriculture, environment, and jobs. "So you would have to take an integrative approach to planning," explains Wah.
+         Reaching the Millennium Development Goals required governments to undertake projects across sectorsÂ—health, education, energy, agriculture, environment, and jobs. "So you would have to take an integrative approach to planning," explains Wah.
          <sup>
           <a href="case_id_124_id_851.html#_ftn8" name="_ftnref8" title="">
            [11]
@@ -335,7 +335,7 @@ font-style:italic;
            [12]
           </a>
          </sup>
-         Cropper’s proposal was a radical departure for UNEP: it had never before created projects in the field. But in the beginning of 2009, UNEP's Post-Conflict and Disaster Management branch began work on what it called the Haiti Regeneration Initiative (HRI).
+         Cropper's proposal was a radical departure for UNEP: it had never before created projects in the field. But in the beginning of 2009, UNEP's Post-Conflict and Disaster Management branch began work on what it called the Haiti Regeneration Initiative (HRI).
          <sup>
           <a href="case_id_124_id_851.html#_ftn10" name="_ftnref10" title="">
            [13]
@@ -371,7 +371,7 @@ font-style:italic;
            [16]
           </a>
          </sup>
-         The two organizations agreed to collaborate and, on March 15, Levy and Alex Fischer, a CIESIN research associate, began a tour of Haiti’s south coast to assess the impact of the 2008 hurricanes and floods. In April, Fischer was appointed program manager.
+         The two organizations agreed to collaborate and, on March 15, Levy and Alex Fischer, a CIESIN research associate, began a tour of HaitiÂ’s south coast to assess the impact of the 2008 hurricanes and floods. In April, Fischer was appointed program manager.
         </p>
         <blockquote>
          <p>
@@ -391,25 +391,25 @@ font-style:italic;
          </p>
         </div>
         <p>
-         Levy and Fischer recommended focusing on a single watershed, with a program to collect baseline and ongoing data in order to implement an integrated, multi-sector development project based on that data. To select a watershed, Levy, Fischer and the research team looked at several key factors: population, size, environmental hazards, local organizations and existing investment. Despite limited information about watersheds in Haiti’s south, they were able to zero in on the Port-à-Piment watershed, a 102-square-kilometer area about 200 kilometers west of Port-au-Prince with an estimated population of 30,000 people. They first visited the watershed on June 15, 2009. In September, UNEP published a preliminary concept note for HRI. The document summed up the initiative's scope and ambition:
+         Levy and Fischer recommended focusing on a single watershed, with a program to collect baseline and ongoing data in order to implement an integrated, multi-sector development project based on that data. To select a watershed, Levy, Fischer and the research team looked at several key factors: population, size, environmental hazards, local organizations and existing investment. Despite limited information about watersheds in HaitiÂ’s south, they were able to zero in on the Port-&agrave;-Piment watershed, a 102-square-kilometer area about 200 kilometers west of Port-au-Prince with an estimated population of 30,000 people. They first visited the watershed on June 15, 2009. In September, UNEP published a preliminary concept note for HRI. The document summed up the initiative's scope and ambition:
         </p>
         <blockquote>
          <p>
-          The Haiti Regeneration Initiative is being developed on the principle that large scale, chronic problems need ambitious, innovative solutions. The vision is both simple and bold—to build and support a national movement in Haiti that understands the underlying issues and tackles them in an organized and integrated way. Well-planned, concerted action will be required over the next 20 years and beyond. The Regeneration Initiative aims to reduce poverty and vulnerability to natural disasters—including climate change—through the restoration of ecosystems and livelihoods based on sustainable natural resource management.
+          The Haiti Regeneration Initiative is being developed on the principle that large scale, chronic problems need ambitious, innovative solutions. The vision is both simple and boldÂ—to build and support a national movement in Haiti that understands the underlying issues and tackles them in an organized and integrated way. Well-planned, concerted action will be required over the next 20 years and beyond. The Regeneration Initiative aims to reduce poverty and vulnerability to natural disastersÂ—including climate changeÂ—through the restoration of ecosystems and livelihoods based on sustainable natural resource management.
          </p>
         </blockquote>
         <div style="float:right;padding:10px">
          <img src="../../files/photos/824/3D_watershed.jpg" style="height: 341px; width: 500px;"/>
          <br/>
          <p class="caption">
-          © Columbia Earth Institute
+          Columbia Earth Institute
           <br/>
-          A 3D map of the Port-à-Piment watershed.
+          A 3D map of the Port-&agrave;-Piment watershed.
          </p>
         </div>
         <hr align="left" size="1" width="33%"/>
         <p>
-         That fall, the Earth Institute team set up a remote office in UNEP's Port-au-Prince office and began planning the data collection phase of the project. The project set ambitious goals to develop new approaches to the intertwined challenges of social, economic, environmental and political fragility in Haiti, and to document the work through comprehensive monitoring. Levy sums up the challenge: “It’s not applying best practices. It’s not translating mature science to a new place. It’s inventing something that people don’t know how to do yet.”
+         That fall, the Earth Institute team set up a remote office in UNEP's Port-au-Prince office and began planning the data collection phase of the project. The project set ambitious goals to develop new approaches to the intertwined challenges of social, economic, environmental and political fragility in Haiti, and to document the work through comprehensive monitoring. Levy sums up the challenge: Â“ItÂ’s not applying best practices. ItÂ’s not translating mature science to a new place. ItÂ’s inventing something that people donÂ’t know how to do yet.Â”
          <sup>
           <a href="case_id_124_id_851.html#_ftn14" name="_ftnref14" title="">
            [17]
@@ -490,7 +490,7 @@ font-style:italic;
             <a href="case_id_124_id_851.html#_ftnref6" name="_ftn6" title="">
              [9]
             </a>
-            EI’s partner in the design phase was the University of Miami’s Miller School of Medicine. The HPP was funded by a November 2008 grant from the Green Family Foundation.
+            EI's partner in the design phase was the University of Miami's Miller School of Medicine. The HPP was funded by a November 2008 grant from the Green Family Foundation.
            </span>
           </p>
          </div>
@@ -514,7 +514,7 @@ font-style:italic;
             <a href="case_id_124_id_851.html#_ftnref8" name="_ftn8" title="">
              [11]
             </a>
-            Author’s interview with Tatiana Wah, September 10, 2013, in New York, NY. All further quotes from Wah, unless otherwise attributed, are from this interview.
+            Author's interview with Tatiana Wah, September 10, 2013, in New York, NY. All further quotes from Wah, unless otherwise attributed, are from this interview.
            </span>
           </p>
          </div>
@@ -524,7 +524,7 @@ font-style:italic;
             <a href="case_id_124_id_851.html#_ftnref9" name="_ftn9" title="">
              [12]
             </a>
-            Author’s interview with Marc Levy on September 11, 2013 in New York, NY. All further quotes from Levy, unless otherwise attributed, are from this interview.
+            Author's interview with Marc Levy on September 11, 2013 in New York, NY. All further quotes from Levy, unless otherwise attributed, are from this interview.
            </span>
           </p>
          </div>
@@ -587,7 +587,7 @@ font-style:italic;
             <a href="case_id_124_id_851.html#_ftnref14" name="_ftn14" title="">
              [17]
             </a>
-            Author’s interview with Marc Levy on September 11, 2013 in New York, NY. All further quotes from Levy, unless otherwise attributed, are from this interview.
+            Author's interview with Marc Levy on September 11, 2013 in New York, NY. All further quotes from Levy, unless otherwise attributed, are from this interview.
            </span>
           </p>
          </div>
@@ -596,10 +596,10 @@ font-style:italic;
        <div class="book-navigation" style="clear:both">
         <div class="page-links clear-block">
          <a class="page-previous" href="case_id_124_id_850.html" title="Go to previous page">
-          « Introduction
+          &#171;&#160;Introduction
          </a>
          <a class="page-next" href="case_id_124_id_852.html" title="Go to next page">
-          Earthquake and a strategy rethink »
+          Earthquake and a strategy rethink&#160;&#187;
          </a>
         </div>
        </div>
@@ -619,17 +619,17 @@ font-style:italic;
       <ul class="menu">
        <li class="leaf">
         <a href="case_id_124_id_241_c_bio.html">
-         Tatiana Wah
+         Tatiana Wah
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_124_id_242_c_bio.html">
-         Marc Levy
+         Marc Levy
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_124_id_243_c_bio.html">
-         Alex Fischer
+         Alex Fischer
         </a>
        </li>
       </ul>
@@ -652,7 +652,7 @@ font-style:italic;
       <ul class="menu">
        <li class="leaf">
         <a href="http://www.journalism.columbia.edu">
-         © 2012 Columbia University Graduate School of Journalism
+         2012 Columbia University Graduate School of Journalism
         </a>
        </li>
       </ul>
