--- a/casestudies/124/casestudy/www/layout/case_id_124_id_853.html
+++ b/casestudies/124/casestudy/www/layout/case_id_124_id_853.html
@@ -3,12 +3,12 @@
 
 
 <head>
-  <title>Dollars and data | Côte Sud Initiative: Integrated Development in Haiti
+  <title>Dollars and data | CÃ´te Sud Initiative: Integrated Development in Haiti
 	- A Journalism Case Study
 
   </title>
  
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 
