--- a/casestudies/124/casestudy/www/layout/case_id_124_id_855.html
+++ b/casestudies/124/casestudy/www/layout/case_id_124_id_855.html
@@ -2,10 +2,10 @@
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
  <head>
   <title>
-   Shifting politics and realities | Côte Sud Initiative: Integrated Development in Haiti
+   Shifting politics and realities | C&&Ocirc;te Sud Initiative: Integrated Development in Haiti
 	- A Journalism Case Study
   </title>
-  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
    <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
    <style media="all" type="text/css">
     @import "css_global/book/book.css";
@@ -213,10 +213,10 @@ font-style:italic;
        </span>
        <div class="content">
         <p>
-         By January 2012, the CSI team felt good about its progress. It had completed baseline data collection, and used that to craft a five-year strategic plan, with costed programs, one of the initiative's first major deliverables. Each year of the plan called for specific interventions. "At the beginning, there’s a larger investment in expensive infrastructure, and then as you move into the middle to end of it, it’s a lot more about building out programs and services," says Fischer. CSI, based on the MDG global estimate of $120 per capita to provide a package of services to a community, set its budget at $18.7 million over five years.
+         By January 2012, the CSI team felt good about its progress. It had completed baseline data collection, and used that to craft a five-year strategic plan, with costed programs, one of the initiative's first major deliverables. Each year of the plan called for specific interventions. "At the beginning, there's a larger investment in expensive infrastructure, and then as you move into the middle to end of it, it's a lot more about building out programs and services," says Fischer. CSI, based on the MDG global estimate of $120 per capita to provide a package of services to a community, set its budget at $18.7 million over five years.
         </p>
         <p>
-         Then, on February 24, there was a shakeup in Haiti’s government. Prime Minister Garry Conille, who had replaced Bellerive only four months earlier, resigned. Conille had supported CSI and agreed to allocate government funding to it; at the very least, a new prime minister would have to be brought up to speed.
+         Then, on February 24, there was a shakeup in Haiti's government. Prime Minister Garry Conille, who had replaced Bellerive only four months earlier, resigned. Conille had supported CSI and agreed to allocate government funding to it; at the very least, a new prime minister would have to be brought up to speed.
         </p>
         <div style="float:right;padding:10px">
          <img src="../../files/photos/826/Port-a-Piment_2010.JPG" style="height: 225px; width: 300px;"/>
@@ -224,7 +224,7 @@ font-style:italic;
          <p class="caption">
           © Columbia Earth Institute
           <br/>
-          A view of the municipality of Port-à-Piment.
+          A view of the municipality of Port-&agrave;-Piment.
          </p>
         </div>
         <p>
@@ -233,19 +233,19 @@ font-style:italic;
            Norway says no.
           </em>
          </strong>
-         The surprises were not over. In December, CSI had reapplied to Norway for another year’s funding. But on March 22, UNEP’s Morton e-mailed with bad news: Norway was slashing the CSI budget—a signal it would not renew. Apparently, it was no longer interested in multi-sector investments but preferred instead to fund a series of small-scale hydroelectric projects.
+         The surprises were not over. In December, CSI had reapplied to Norway for another year's funding. But on March 22, UNEP's Morton e-mailed with bad news: Norway was slashing the CSI budgetÂ—a signal it would not renew. Apparently, it was no longer interested in multi-sector investments but preferred instead to fund a series of small-scale hydroelectric projects.
         </p>
         <p>
-         Wah and her colleagues had felt apprehensive for several months about the Norwegian commitment. Over its year of involvement, Norway had sent various representatives to discuss CSI, and each had brought a different perspective, recalls Wah. For example, one representative talked about taking a human-rights based approach to development. "No one knew what that really meant on the ground,” she says. In mid-February 2012, Joel Boutroue, a Frenchman representing Norway's interests in the project, expressed concern that CSI didn't have an exit strategy. "Well, the exit strategy was for the government to take it over," notes  Wah.
+         Wah and her colleagues had felt apprehensive for several months about the Norwegian commitment. Over its year of involvement, Norway had sent various representatives to discuss CSI, and each had brought a different perspective, recalls Wah. For example, one representative talked about taking a human-rights based approach to development. "No one knew what that really meant on the ground," she says. In mid-February 2012, Joel Boutroue, a Frenchman representing Norway's interests in the project, expressed concern that CSI didn't have an exit strategy. "Well, the exit strategy was for the government to take it over," notes Wah.
         </p>
         <p>
-         Nonetheless, the decision to cut funding took CSI aback. The team was unprepared in part, says Wah, because the Norwegian visitors had said nothing “until we started reapplying for the monies. It was mindboggling, because [at the same time,] they gave money for an MVP in Africa.” Moreover, the Norwegians had seen the CSI concept note, which described it as a five-year project with a 20-year horizon, says Fischer.
+         Nonetheless, the decision to cut funding took CSI aback. The team was unprepared in part, says Wah, because the Norwegian visitors had said nothing "until we started reapplying for the monies. It was mindboggling, because [at the same time,] they gave money for an MVP in Africa." Moreover, the Norwegians had seen the CSI concept note, which described it as a five-year project with a 20-year horizon, says Fischer.
         </p>
         <p>
-         They came to the south and they stood in the middle of this highly eroded river bed and said, “We’re here with this project, we’re here for five years, we want this to work.” It was documented in the news reports, and all of our partner organizations who were there also heard them say that. And the community very explicitly heard them say that.
+         They came to the south and they stood in the middle of this highly eroded river bed and said, "We're here with this project, we're here for five years, we want this to work." It was documented in the news reports, and all of our partner organizations who were there also heard them say that. And the community very explicitly heard them say that.
         </p>
         <p>
-         Fortunately, thanks to the concern over Norway, CSI had started to solicit other potential funders for the next year of operations. Among those,Wah had approached the Inter-American Development Bank, which held two blocks of funds dedicated to projects in the south. The first was $14 million from Norway (channeled through HRF) for watershed reclamation projects, while another $30 million in unspent funding for environmental regeneration came from multiple donors. On March 6, Wah had met with IDB officials to discuss funding for Port-à-Piment’s next stage. She would have to follow up.
+         Fortunately, thanks to the concern over Norway, CSI had started to solicit other potential funders for the next year of operations. Among those,Wah had approached the Inter-American Development Bank, which held two blocks of funds dedicated to projects in the south. The first was $14 million from Norway (channeled through HRF) for watershed reclamation projects, while another $30 million in unspent funding for environmental regeneration came from multiple donors. On March 6, Wah had met with IDB officials to discuss funding for Port-&agrave;-Piment's next stage. She would have to follow up.
         </p>
         <p>
          <strong>
@@ -253,14 +253,14 @@ font-style:italic;
            Waning support.
           </em>
          </strong>
-         With funding evaporating, UNEP wanted to ensure the broader CSI project moved forward in some form. UNEP staff, in an effort to save portions of CSI and placate the Norwegians, recast it to focus narrowly on fisheries, agriculture and hydroelectric power. But the Earth Institute research team disagreed with this change, arguing that such efforts were “not going to get anywhere near environmental revitalization," says Wah.
+         With funding evaporating, UNEP wanted to ensure the broader CSI project moved forward in some form. UNEP staff, in an effort to save portions of CSI and placate the Norwegians, recast it to focus narrowly on fisheries, agriculture and hydroelectric power. But the Earth Institute research team disagreed with this change, arguing that such efforts were "not going to get anywhere near environmental revitalization," says Wah.
         </p>
         <p>
          The EI team decided to seek additional funding for the watershed project independent of UNEP. Levy recalls a series of unpleasant meetings and phone calls with UNEP staffers. "They tried very, very hard to talk me out of the strategy of seeking funding on our own," he says.
         </p>
         <blockquote>
          <p>
-          I remember one particular meeting in Port-Salut, the place where we had our local base in the region, and … the head of the UNEP office just lashed out at us and said, “You can’t do this. It’s going to backfire. It’s not going to work.”
+          I remember one particular meeting in Port-Salut, the place where we had our local base in the region, and the head of the UNEP office just lashed out at us and said, "You can't do this. It's going to backfire. It's not going to work."
          </p>
         </blockquote>
         <blockquote>
@@ -274,16 +274,16 @@ font-style:italic;
          </p>
         </blockquote>
         <p>
-         Levy understood that UNEP was reacting to political realities."I think they were looking for a safer way to continue, and the positive spin on it would be that it’s better to have a well-funded, continuous program that’s doing good in, say, two sectors than to have a dead program that was trying to pursue [eight] sectors," he says. But the Earth Institute team didn’t agree that all was lost. They were disappointed by their partner’s willingness to walk away from the Port-à-Piment component of the initiative, which they considered the core of the original objective: to solve complex, intertwined development challenges.
+         Levy understood that UNEP was reacting to political realities."I think they were looking for a safer way to continue, and the positive spin on it would be that it's better to have a well-funded, continuous program that's doing good in, say, two sectors than to have a dead program that was trying to pursue [eight] sectors," he says. But the Earth Institute team didn't agree that all was lost. They were disappointed by their partner's willingness to walk away from the Port-&agrave;-Piment component of the initiative, which they considered the core of the original objective: to solve complex, intertwined development challenges.
         </p>
        </div>
        <div class="book-navigation" style="clear:both">
         <div class="page-links clear-block">
          <a class="page-previous" href="case_id_124_id_854.html" title="Go to previous page">
-          « Bureaucracy and capacity
+          &#171;&#160;Bureaucracy and capacity
          </a>
          <a class="page-next" href="case_id_124_id_856.html" title="Go to next page">
-          Fragile state factor »
+          Fragile state factor&#160;&#187;
          </a>
         </div>
        </div>
@@ -303,17 +303,17 @@ font-style:italic;
       <ul class="menu">
        <li class="leaf">
         <a href="case_id_124_id_241_c_bio.html">
-         Tatiana Wah
+         Tatiana Wah
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_124_id_242_c_bio.html">
-         Marc Levy
+         Marc Levy
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_124_id_243_c_bio.html">
-         Alex Fischer
+         Alex Fischer
         </a>
        </li>
       </ul>
@@ -336,7 +336,7 @@ font-style:italic;
       <ul class="menu">
        <li class="leaf">
         <a href="http://www.journalism.columbia.edu">
-         © 2012 Columbia University Graduate School of Journalism
+         2012 Columbia University Graduate School of Journalism
         </a>
        </li>
       </ul>
