--- a/casestudies/43/casestudy/www/layout/case_id_43.html
+++ b/casestudies/43/casestudy/www/layout/case_id_43.html
@@ -5,10 +5,10 @@
 
 
 <head>
-  <title>When the Story is Us: Miami Herald, Nuevo Herald and Radio Martí | When the story is us: Miami Herald, Nuevo Herald and Radio Mart&iacute;
+  <title>When the Story is Us: Miami Herald, Nuevo Herald and Radio MartÃ­ | When the story is us: Miami Herald, Nuevo Herald and Radio Mart&iacute;
   </title>
  
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 
@@ -92,7 +92,7 @@ font-style:italic;
 <table border="0" cellspacing="0" cellpadding="0">
 	<tr>
 		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_43.html" title="Home"><span>When the Story is Us: Miami Herald, Nuevo Herald and Radio Martí</span></a></h1>						</td>
+		<h1 class='site-name'><a href="case_id_43.html" title="Home"><span>When the Story is Us: Miami Herald, Nuevo Herald and Radio MartÃ­</span></a></h1>						</td>
 		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
 	</tr>
 
@@ -149,7 +149,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  href="case_id_43_id_468.html">Castañeda era</a>
+<li class="leaf"><a  href="case_id_43_id_468.html">CastaÃ±eda era</a>
 
 
 
@@ -288,7 +288,7 @@ font-style:italic;
 		
 		
 		</div>		
-		<h1 class="title">When the Story is Us: <i>Miami Herald</i>, <i>Nuevo Herald</i> and Radio Martí</h1>
+		<h1 class="title">When the Story is Us: <i>Miami Herald</i>, <i>Nuevo Herald</i> and Radio MartÃ­</h1>
 		
 		
 		
