--- a/casestudies/43/casestudy/www/layout/case_id_43_id_468.html
+++ b/casestudies/43/casestudy/www/layout/case_id_43_id_468.html
@@ -2,9 +2,9 @@
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
  <head>
   <title>
-   Castañeda era | When the story is us: Miami Herald, Nuevo Herald and Radio Martí
+   Casta&ntilde;eda era | When the story is us: Miami Herald, Nuevo Herald and Radio Mart&iacute;
   </title>
-  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
    <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
    <style media="all" type="text/css">
     @import "css_global/book/book.css";
@@ -99,7 +99,7 @@ font-style:italic;
        <h1 class="site-name">
         <a href="case_id_43.html" title="Home">
          <span>
-          Castañeda era
+          Casta&ntilde;eda era
          </span>
         </a>
        </h1>
@@ -140,12 +140,12 @@ font-style:italic;
           <i>
            Herald
           </i>
-          s—brief history
+          s' brief history
          </a>
         </li>
         <li class="leaf">
          <a class="active" href="case_id_43_id_468.html">
-          Castañeda era
+          Casta&ntilde;eda era
          </a>
         </li>
         <li class="leaf">
@@ -165,7 +165,7 @@ font-style:italic;
         </li>
         <li class="collapsed">
          <a href="case_id_43_id_472.html">
-          Notification—Sept. 7
+          Notification' Sept. 7
          </a>
         </li>
         <li class="leaf">
@@ -235,7 +235,7 @@ font-style:italic;
        </a>
       </div>
       <h1 class="title">
-       Castañeda era
+       Casta&ntilde;eda era
       </h1>
       <div class="tabs">
       </div>
@@ -470,22 +470,22 @@ div.Section1
          </p>
         </div>
         <p>
-         Building on that success, Ibargüen engineered a complete editorial re-imagining of
+         Building on that success, Ibarg&uuml;en engineered a complete editorial re-imagining of
          <i>
           Nuevo Herald
          </i>
-         . In November 1998, he hired as editor and publisher the respected Carlos Castañeda, who had helped the Puerto Rican
+         . In November 1998, he hired as editor and publisher the respected Carlos Casta&ntilde;eda, who had helped the Puerto Rican
          <i>
           El Nuevo Dia
          </i>
-         grow from 16,000 to 230,000 circulation, and consulted to dozens of fledgling newspapers in newly democratic Latin American countries. “The only thing I require of you is a newspaper that cannot be confused with the
+         grow from 16,000 to 230,000 circulation, and consulted to dozens of fledgling newspapers in newly democratic Latin American countries. "The only thing I require of you is a newspaper that cannot be confused with the
          <i>
           Miami Herald
          </i>
-         ,” Ibargüen recalls telling Castañeda.
+         ," Ibarg&uuml;en recalls telling Casta&ntilde;eda.
         </p>
         <p>
-         Castañeda delivered. With a staff of 84, including 11 general assignment reporters (compared to 425 on the
+         Casta&ntilde;eda delivered. With a staff of 84, including 11 general assignment reporters (compared to 425 on the
          <i>
           Miami Herald
          </i>
@@ -493,7 +493,7 @@ div.Section1
          <i>
           El Nuevo Herald
          </i>
-         set out to cover its community in-depth. ENH had never published editorials per se, but it did run signed opinion pieces every day—a prominent outlet for forceful community views. Located on the sixth floor of the
+         set out to cover its community in-depth. ENH had never published editorials per se, but it did run signed opinion pieces every day' a prominent outlet for forceful community views. Located on the sixth floor of the
          <i>
           Miami Herald
          </i>
@@ -501,7 +501,7 @@ div.Section1
          <i>
           Miami Herald
          </i>
-         . “It was absolutely my intent that they should compete,” comments Ibargüen. “Why in the world would you make them play well together? They should be competing for the story.” He adds:
+         . "It was absolutely my intent that they should compete," comments Ibarg&uuml;en. "Why in the world would you make them play well together? They should be competing for the story." He adds:
         </p>
         <blockquote>
          <p>
@@ -518,7 +518,7 @@ div.Section1
         </blockquote>
         <p>
          <i>
-          Listen to Ibargüen
+          Listen to Ibarg&uuml;en
          </i>
          <i>
           on
@@ -532,19 +532,19 @@ div.Section1
          <audio controls><source src="../../files/audios/103/Ibarguen&#32;text.mp3" type="audio/mpeg"></audio>
         </p>
         <p>
-         Castañeda stepped down in December 2001, replaced by
+         Casta&ntilde;eda stepped down in December 2001, replaced by
          <a href="case_id_43_id_126_c_bio.html">
-          Humberto Castelló
+          Humberto Castell&oacute;
          </a>
-         , who had joined the paper in 1997. The paper Castelló inherited boasted bold graphics, color pictures, and catchy headlines. The
+         , who had joined the paper in 1997. The paper Castell&oacute; inherited boasted bold graphics, color pictures, and catchy headlines. The
          <i>
           Columbia Journalism Review
          </i>
-         admiringly termed it “a hybrid, a flashy mix of Latin élan, Cuban exile political fervor, and
+         admiringly termed it "a hybrid, a flashy mix of Latin &eacute;lan, Cuban exile political fervor, and
          <i>
           People
          </i>
-         magazine. It’s a broadsheet with a tabloid mentality.”
+         magazine. It's a broadsheet with a tabloid mentality."
          <a href="case_id_43_id_468.html#_ftn1" name="_ftnref1" title="">
           <span>
            <span>
@@ -556,7 +556,7 @@ div.Section1
            </span>
           </span>
          </a>
-         On the other hand, “El Nuevo can be sensational, hyperbolic, pandering to the worst instincts,” noted Jim Mullin, editor of the alternative weekly
+         On the other hand, "El Nuevo can be sensational, hyperbolic, pandering to the worst instincts," noted Jim Mullin, editor of the alternative weekly
          <i>
           New Times
          </i>
@@ -574,7 +574,7 @@ div.Section1
          </a>
         </p>
         <p>
-         During Castañeda’s tenure,
+         During Casta&ntilde;eda's tenure,
          <i>
           El Nuevo Herald
          </i>
@@ -624,7 +624,7 @@ div.Section1
            <span style="font-size: smaller;">
             <a href="case_id_43_id_468.html#_ftnref1" name="_ftn1" title="">
             </a>
-            Mike Clary, “Would you create another newspaper to compete with your own?”
+            Mike Clary, "Would you create another newspaper to compete with your own?"
             <i>
              Columbia Journalism Review
             </i>
@@ -648,7 +648,7 @@ div.Section1
            <span style="font-size: smaller;">
             <a href="case_id_43_id_468.html#_ftnref2" name="_ftn2" title="">
             </a>
-            Mike Clary, “Would you create another newspaper to compete with your own?”
+            Mike Clary, "Would you create another newspaper to compete with your own?"
            </span>
           </p>
          </div>
@@ -668,7 +668,7 @@ div.Section1
            <span style="font-size: smaller;">
             <a href="case_id_43_id_468.html#_ftnref3" name="_ftn3" title="">
             </a>
-            Daniel Shoer Roth, “Nombran a Humberto Castelló director de El Nuevo Herald,”
+            Daniel Shoer Roth, "Nombran a Humberto Castell&oacute; director de El Nuevo Herald,"
             <i>
              El Nuevo Herald
             </i>
@@ -711,14 +711,14 @@ div.Section1
        <div class="book-navigation" style="clear:both">
         <div class="page-links clear-block">
          <a class="page-previous" href="case_id_43_id_467.html" title="Go to previous page">
-          « The two
+          &#171;&#160;The two
           <i>
            Herald
           </i>
-          s—brief history
+          s' brief history
          </a>
          <a class="page-next" href="case_id_43_id_469.html" title="Go to next page">
-          Separate cultures »
+          Separate cultures&#160;&#187;
          </a>
         </div>
        </div>
@@ -738,32 +738,32 @@ div.Section1
       <ul class="menu">
        <li class="leaf">
         <a href="case_id_43_id_125_c_bio.html">
-         Alberto Ibargüen
+         Alberto Ibarg&uuml;en
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_126_c_bio.html">
-         Humberto Castelló
+         Humberto Castell&oacute;
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_127_c_bio.html">
-         Howard Weaver
+         Howard Weaver
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_128_c_bio.html">
-         Oscar Corral
+         Oscar Corral
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_129_c_bio.html">
-         Wilfredo Cancio Isla
+         Wilfredo Cancio Isla
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_130_c_bio.html">
-         Tom Fiedler
+         Tom Fiedler
         </a>
        </li>
       </ul>
