--- a/casestudies/43/casestudy/www/layout/case_id_43_id_469.html
+++ b/casestudies/43/casestudy/www/layout/case_id_43_id_469.html
@@ -2,9 +2,9 @@
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
  <head>
   <title>
-   Separate cultures | When the story is us: Miami Herald, Nuevo Herald and Radio Martí
+   Separate cultures | When the story is us: Miami Herald, Nuevo Herald and Radio Mart&iacute;
   </title>
-  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
    <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
    <style media="all" type="text/css">
     @import "css_global/book/book.css";
@@ -140,12 +140,12 @@ font-style:italic;
           <i>
            Herald
           </i>
-          s—brief history
+          s' brief history
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_43_id_468.html">
-          Castañeda era
+          Casta&ntilde;eda era
          </a>
         </li>
         <li class="leaf">
@@ -165,7 +165,7 @@ font-style:italic;
         </li>
         <li class="collapsed">
          <a href="case_id_43_id_472.html">
-          Notification—Sept. 7
+          Notification' Sept. 7
          </a>
         </li>
         <li class="leaf">
@@ -381,11 +381,11 @@ div.Section1
          <a href="case_id_43_id_130_c_bio.html">
           Tom Fiedler
          </a>
-         , a veteran TMH reporter and editor who became executive editor and vice president in 2001, says there was a “determination [by management] to make these two separate newspapers, that happened to be owned by the same corporate parent, and that’s the way we operated… We didn’t view
+         , a veteran TMH reporter and editor who became executive editor and vice president in 2001, says there was a "determination [by management] to make these two separate newspapers, that happened to be owned by the same corporate parent, and that's the way we operatedÂ… We didn't view
          <i>
           El Nuevo Herald
          </i>
-         as a competitor because we were so much bigger, and our aspirations were so much larger.”
+         as a competitor because we were so much bigger, and our aspirations were so much larger."
          <a href="case_id_43_id_469.html#_ftn2" name="_ftnref2" title="">
           <span>
            <span>
@@ -427,7 +427,7 @@ div.Section1
         </p>
         <blockquote>
          <p>
-          Here the Cold War is not a distant memory and Elian is not just a little boy. He is the embodiment of 40 interminable years of rancor and bitterness toward Fidel Castro—and toward the United States government, for failing to depose him or take a harder line… Here, politicians are judged first and foremost by how much they despise Fidel and Communism, not by where they stand on education and Social Security.
+          Here the Cold War is not a distant memory and Elian is not just a little boy. He is the embodiment of 40 interminable years of rancor and bitterness toward Fidel Castro' and toward the United States government, for failing to depose him or take a harder lineÂ… Here, politicians are judged first and foremost by how much they despise Fidel and Communism, not by where they stand on education and Social Security.
           <a href="case_id_43_id_469.html#_ftn3" name="_ftnref3" title="">
            <span>
             <span>
@@ -449,7 +449,7 @@ div.Section1
          .
         </p>
         <p>
-         By 2006, the two papers and their staffs felt in some ways like different worlds. Each was proud of its brand of journalism. TMH culture was, says Fiedler, typical of US papers: “American newspapers value being the neutral observer and the unaligned observer, free to be critical of all power.” While the newsroom reflected the Miami community by being one of the most racially and ethnically diverse in the country, it was, says Fiedler, an “Anglo-dominant newsroom.” Nonetheless, a significant number of Cuban-Americans worked there. Most of them had been born in Cuba, but raised and educated in the US. They thought of themselves by and large as journalists first, Cuban-Americans second.
+         By 2006, the two papers and their staffs felt in some ways like different worlds. Each was proud of its brand of journalism. TMH culture was, says Fiedler, typical of US papers: "American newspapers value being the neutral observer and the unaligned observer, free to be critical of all power." While the newsroom reflected the Miami community by being one of the most racially and ethnically diverse in the country, it was, says Fiedler, an "Anglo-dominant newsroom." Nonetheless, a significant number of Cuban-Americans worked there. Most of them had been born in Cuba, but raised and educated in the US. They thought of themselves by and large as journalists first, Cuban-Americans second.
         </p>
         <p>
          The
@@ -460,7 +460,7 @@ div.Section1
          <i>
           Miami Herald
          </i>
-         ’s. “The headlines are very passionate. And sometimes the use of photography,” exclaims Castelló.
+         's. "The headlines are very passionate. And sometimes the use of photography," exclaims Castell&oacute;.
          <a href="case_id_43_id_469.html#_ftn4" name="_ftnref4" title="">
           <span>
            <span>
@@ -489,7 +489,7 @@ div.Section1
          <i>
           El Nuevo Herald
          </i>
-         . “There’s no question about it, the
+         . "There's no question about it, the
          <i>
           Miami Herald
          </i>
@@ -497,11 +497,11 @@ div.Section1
          <i>
           El Nuevo Herald
          </i>
-         ,” confirms Ibargüen. “I used that to great advantage when I would tell [
+         ," confirms Ibarg&uuml;en. "I used that to great advantage when I would tell [
          <i>
           El Nuevo
          </i>
-         reporters]: ‘We’ve got to get this story before the Americans get it.’” That rankled with ENH reporters, many of whom were full professors in Cuba and who considered themselves far more cosmopolitan than the average TMH reporter. The two papers shared common editorial values, however. As Ibargüen puts it: “I think we all subscribed to full, accurate, contextual search for truth. But your truth and my search are different.”
+         reporters]: Â‘We've got to get this story before the Americans get it.'" That rankled with ENH reporters, many of whom were full professors in Cuba and who considered themselves far more cosmopolitan than the average TMH reporter. The two papers shared common editorial values, however. As Ibarg&uuml;en puts it: "I think we all subscribed to full, accurate, contextual search for truth. But your truth and my search are different."
         </p>
         <p>
          <b>
@@ -510,11 +510,11 @@ div.Section1
           </i>
           .
          </b>
-         But mostly in 2006, the two newsrooms had very little to do with one another except on occasion to run each other’s stories. While it had been common during the Ibargüen period for members of each editorial staff to sit in on the news meetings of the other, that had stopped. Fiedler says he and Castelló spoke on a regular basis only on business matters, during a regular Wednesday morning meeting of the executive committee with the publisher. Jesús Díaz formerly general manager for the Miami Herald Company, had become publisher in June 2005. “I never spoke to [Castelló] about stories that we were going to do,” says Fiedler. Clark Hoyt, who knew both papers well, says:
+         But mostly in 2006, the two newsrooms had very little to do with one another except on occasion to run each other's stories. While it had been common during the Ibarg&uuml;en period for members of each editorial staff to sit in on the news meetings of the other, that had stopped. Fiedler says he and Castell&oacute; spoke on a regular basis only on business matters, during a regular Wednesday morning meeting of the executive committee with the publisher. Jes&uacute;s D&iacute;az formerly general manager for the Miami Herald Company, had become publisher in June 2005. "I never spoke to [Castell&oacute;] about stories that we were going to do," says Fiedler. Clark Hoyt, who knew both papers well, says:
         </p>
         <blockquote>
          <p>
-          The two papers, they didn’t attend each others’ news meetings. They didn’t necessarily know what each other was reporting, even though they’re in the same building and nominally cousins or brother or sisters or whatever. There was a sense in
+          The two papers, they didn't attend each others' news meetings. They didn't necessarily know what each other was reporting, even though they're in the same building and nominally cousins or brother or sisters or whatever. There was a sense in
           <i>
            El Nuevo Herald
           </i>
@@ -522,7 +522,7 @@ div.Section1
           <i>
            Miami Herald
           </i>
-          looked down on their journalism and didn’t respect it.
+          looked down on their journalism and didn't respect it.
          </p>
         </blockquote>
         <div>
@@ -569,7 +569,7 @@ div.Section1
             </a>
            </span>
            <span style="font-size: smaller;">
-            Author’s interview with Tom Fiedler on January 16, 2009, in Boston, MA. All further quotes from Fiedler, unless otherwise attributed, are from this interview.
+            Author's interview with Tom Fiedler on January 16, 2009, in Boston, MA. All further quotes from Fiedler, unless otherwise attributed, are from this interview.
            </span>
           </p>
          </div>
@@ -589,7 +589,7 @@ div.Section1
            <span style="font-size: smaller;">
             Lizette Alvarez,
             <a class="extlink" href="http://www.nytimes.com/2000/04/09/weekinreview/correspondence-little-havana-look-cuba-s-exiles-both-sides-great-divide.html?pagewanted=1" target="_blank">
-             “A Look at Cuba’s Exiles from Both Sides of a Great Divide,”
+             "A Look at Cuba's Exiles from Both Sides of a Great Divide,"
             </a>
             <i>
              New York Times
@@ -612,13 +612,13 @@ div.Section1
             </a>
            </span>
            <span style="font-size: smaller;">
-            Castelló mentions one incident which embarrassed
+            Castell&oacute; mentions one incident which embarrassed
             <i>
              El Nuevo Herald
             </i>
-            . On June 25, 2006, it published a montage of two archived photos—a 1998 photo of two Cuban prostitutes hailing a tourist; and a 1994 picture of Cuban police. The montage made it appear that the police were ignoring the prostitutes. The paper explained that the photos were meant to run side-by-side, but that in the printing process they ran together. It apologized for its failure to properly identify the photo as a montage. See: Laura Wides-Munoz,
+            . On June 25, 2006, it published a montage of two archived photos' a 1998 photo of two Cuban prostitutes hailing a tourist; and a 1994 picture of Cuban police. The montage made it appear that the police were ignoring the prostitutes. The paper explained that the photos were meant to run side-by-side, but that in the printing process they ran together. It apologized for its failure to properly identify the photo as a montage. See: Laura Wides-Munoz,
             <a class="extlink" href="http://www.theledger.com/article/20060729/NEWS/607290362?Title=Newspaper-Admits-Photos-Altered" target="_blank">
-             “Newspaper Admits Photos Altered,”
+             "Newspaper Admits Photos Altered,"
             </a>
             <i>
              Associated Press
@@ -632,10 +632,10 @@ div.Section1
        <div class="book-navigation" style="clear:both">
         <div class="page-links clear-block">
          <a class="page-previous" href="case_id_43_id_468.html" title="Go to previous page">
-          « Castañeda era
+          &#171;&#160;Casta&ntilde;eda era
          </a>
          <a class="page-next" href="case_id_43_id_470.html" title="Go to next page">
-          Corral's series »
+          Corral's series&#160;&#187;
          </a>
         </div>
        </div>
@@ -655,32 +655,32 @@ div.Section1
       <ul class="menu">
        <li class="leaf">
         <a href="case_id_43_id_125_c_bio.html">
-         Alberto Ibargüen
+         Alberto Ibarg&uuml;en
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_126_c_bio.html">
-         Humberto Castelló
+         Humberto Castell&oacute;
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_127_c_bio.html">
-         Howard Weaver
+         Howard Weaver
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_128_c_bio.html">
-         Oscar Corral
+         Oscar Corral
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_129_c_bio.html">
-         Wilfredo Cancio Isla
+         Wilfredo Cancio Isla
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_130_c_bio.html">
-         Tom Fiedler
+         Tom Fiedler
         </a>
        </li>
       </ul>
