--- a/casestudies/43/casestudy/www/layout/case_id_43_id_470.html
+++ b/casestudies/43/casestudy/www/layout/case_id_43_id_470.html
@@ -2,9 +2,9 @@
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
  <head>
   <title>
-   Corral's series | When the story is us: Miami Herald, Nuevo Herald and Radio Martí
+   Corral's series | When the story is us: Miami Herald, Nuevo Herald and Radio Mart&iacute;
   </title>
-  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
    <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
    <style media="all" type="text/css">
     @import "css_global/book/book.css";
@@ -140,12 +140,12 @@ font-style:italic;
           <i>
            Herald
           </i>
-          s—brief history
+          s' brief history
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_43_id_468.html">
-          Castañeda era
+          Casta&ntilde;eda era
          </a>
         </li>
         <li class="leaf">
@@ -165,7 +165,7 @@ font-style:italic;
         </li>
         <li class="collapsed">
          <a href="case_id_43_id_472.html">
-          Notification—Sept. 7
+          Notification' Sept. 7
          </a>
         </li>
         <li class="leaf">
@@ -369,17 +369,17 @@ div.Section1
           </i>
           .
          </b>
-         The first packets of information did not arrive for nine months, and it took nearly two years to get everything, but by late spring 2006 Corral had what he’d requested. He proposed to his editors, Assistant City Editor Myriam Marquez and Metro Editor Manny Garcia, a big piece on public funding for democracy in Cuba: how much money was involved, who received it, how much ever reached opposition groups in Cuba? They agreed that a 4-5 part series could make a major contribution to public understanding of this use of taxpayer dollars. The series, he thought, would run on consecutive days.
+         The first packets of information did not arrive for nine months, and it took nearly two years to get everything, but by late spring 2006 Corral had what he'd requested. He proposed to his editors, Assistant City Editor Myriam Marquez and Metro Editor Manny Garcia, a big piece on public funding for democracy in Cuba: how much money was involved, who received it, how much ever reached opposition groups in Cuba? They agreed that a 4-5 part series could make a major contribution to public understanding of this use of taxpayer dollars. The series, he thought, would run on consecutive days.
         </p>
         <p>
-         As Corral dug into the records, however, it became clear that USAID was a secondary player. It gave some $20 million a year total to various Cuba programs. But the Broadcasting Board of Governors (BBG) channeled some $37 million a year to Radio/TV Martí—a Miami-based broadcaster beaming news into Cuba. BBG was an independent Washington, DC, agency responsible for civilian US government and government-sponsored international
+         As Corral dug into the records, however, it became clear that USAID was a secondary player. It gave some $20 million a year total to various Cuba programs. But the Broadcasting Board of Governors (BBG) channeled some $37 million a year to Radio/TV Mart&iacute;a Miami-based broadcaster beaming news into Cuba. BBG was an independent Washington, DC, agency responsible for civilian US government and government-sponsored international
          <em>
           broadcasting
          </em>
-         such as Voice of America, Radio Free Europe/Radio Liberty, and Radio/TV Martí. The Office of Cuba Broadcasting, which oversaw Radio/TV Martí, was part of the BBG administrative and marketing arm.
+         such as Voice of America, Radio Free Europe/Radio Liberty, and Radio/TV Mart&iacute;. The Office of Cuba Broadcasting, which oversaw Radio/TV Mart&iacute;, was part of the BBG administrative and marketing arm.
         </p>
         <p>
-         Corral decided to follow the money. In June 2006, he started a series of interviews with management at both Radio/TV Martí and at the Office of Cuba Broadcasting. What they told him about their operations provided interesting background. But as he delved deeper, Corral had specific questions he preferred not to put directly to the managers until he had done as much independent research as possible. Where was the $37 million going, he wondered? Who exactly was getting paid? For what? How much?
+         Corral decided to follow the money. In June 2006, he started a series of interviews with management at both Radio/TV Mart&iacute; and at the Office of Cuba Broadcasting. What they told him about their operations provided interesting background. But as he delved deeper, Corral had specific questions he preferred not to put directly to the managers until he had done as much independent research as possible. Where was the $37 million going, he wondered? Who exactly was getting paid? For what? How much?
         </p>
         <p>
          <b>
@@ -392,7 +392,7 @@ div.Section1
         </p>
         <blockquote>
          <p>
-          I didn’t want to trigger any unnecessary alerts in Miami. [The Office of Cuba Broadcasting in Miami] was run by a political appointee who was very close to the Republican legislators who appointed him, and I just, I thought it would probably be smarter to go through Washington at that point instead of going directly through Miami.
+          I didn't want to trigger any unnecessary alerts in Miami. [The Office of Cuba Broadcasting in Miami] was run by a political appointee who was very close to the Republican legislators who appointed him, and I just, I thought it would probably be smarter to go through Washington at that point instead of going directly through Miami.
           <a href="case_id_43_id_470.html#_ftn1" name="_ftnref1" title="">
            <span>
             <span>
@@ -407,14 +407,14 @@ div.Section1
          </p>
         </blockquote>
         <p>
-         He asked for documents, especially vendor reports, on funding to the Office of Cuba Broadcasting. This time the records arrived quickly, some 1,200 pages of names and numbers—what specific individuals had been paid for specific services. As Corral started to sift through the voluminous records, he paid special attention to those who were compensated for appearing on various broadcasts on television and radio. What he saw disturbed him: names he recognized of other Miami-based reporters who had appeared on either Radio or TV Martí, and had been paid for their time. He knew several of them: “I saw names popping up in these 1,200 pages of people that I know, people that work in my building.”
+         He asked for documents, especially vendor reports, on funding to the Office of Cuba Broadcasting. This time the records arrived quickly, some 1,200 pages of names and numbers' what specific individuals had been paid for specific services. As Corral started to sift through the voluminous records, he paid special attention to those who were compensated for appearing on various broadcasts on television and radio. What he saw disturbed him: names he recognized of other Miami-based reporters who had appeared on either Radio or TV Mart&iacute;, and had been paid for their time. He knew several of them: "I saw names popping up in these 1,200 pages of people that I know, people that work in my building."
         </p>
         <p>
          Some of the reporters listed worked at
          <i>
           El Nuevo Herald
          </i>
-         . Many of them reported in Miami on Cuba and Cuban-American affairs. Corral was not sure what to make of it. As he recalls, “I know that I’m a reporter and if I’m taking money from a government agency, especially one that I’m covering, I better be prepared to have an explanation for that.” Some of the reporters seemed to have earned thousands of dollars from the government-funded station. While he had no proof there was wrongdoing, Corral took his discovery to Editors Garcia and Marquez, both of whom encouraged him to keep pursuing it.
+         . Many of them reported in Miami on Cuba and Cuban-American affairs. Corral was not sure what to make of it. As he recalls, "I know that I'm a reporter and if I'm taking money from a government agency, especially one that I'm covering, I better be prepared to have an explanation for that." Some of the reporters seemed to have earned thousands of dollars from the government-funded station. While he had no proof there was wrongdoing, Corral took his discovery to Editors Garcia and Marquez, both of whom encouraged him to keep pursuing it.
          <a href="case_id_43_id_470.html#_ftn2" name="_ftnref2" title="">
           <span>
            <span>
@@ -429,15 +429,15 @@ div.Section1
          They also assigned him a couple of other reporters to help work through the records.
         </p>
         <p>
-         As they did so, Corral felt increasing discomfort. “Putting totals on these people that I was familiar with was kind of uncomfortable,” he recalls. He mentioned his reservations to his wife, a former
+         As they did so, Corral felt increasing discomfort. "Putting totals on these people that I was familiar with was kind of uncomfortable," he recalls. He mentioned his reservations to his wife, a former
          <i>
           Miami Herald
          </i>
-         reporter, who told him, “You don’t have to do this.” But he decided he did. “I knew there would be consequences, and I knew that it would be tough,” he says. But he was frustrated by the way he felt the South Florida media “just kind of fell in line with everything the federal government did.” Moreover, he discerned a conflict of interest in the fact that “the people who were supposed to be informing [the Cuban exile community] about Cuban exile politics are benefiting from the US policy towards Cuba.”
+         reporter, who told him, "You don't have to do this." But he decided he did. "I knew there would be consequences, and I knew that it would be tough," he says. But he was frustrated by the way he felt the South Florida media "just kind of fell in line with everything the federal government did." Moreover, he discerned a conflict of interest in the fact that "the people who were supposed to be informing [the Cuban exile community] about Cuban exile politics are benefiting from the US policy towards Cuba."
         </p>
         <blockquote>
          <p>
-          Nobody asked questions. Why is this policy like this? Why is this money going here? Why are these people benefiting? [After all this funding,] why isn’t Cuba more democratic? What’s going on here?
+          Nobody asked questions. Why is this policy like this? Why is this money going here? Why are these people benefiting? [After all this funding,] why isn't Cuba more democratic? What's going on here?
          </p>
         </blockquote>
         <p>
@@ -463,7 +463,7 @@ div.Section1
             </a>
            </span>
            <span style="font-size: smaller;">
-            Author’s interview with Oscar Corral on May 21, 2009, in Miami. All further quotes from Corral, unless otherwise attributed, are from this interview.
+            Author's interview with Oscar Corral on May 21, 2009, in Miami. All further quotes from Corral, unless otherwise attributed, are from this interview.
            </span>
           </p>
          </div>
@@ -492,10 +492,10 @@ div.Section1
        <div class="book-navigation" style="clear:both">
         <div class="page-links clear-block">
          <a class="page-previous" href="case_id_43_id_469.html" title="Go to previous page">
-          « Separate cultures
+          &#171;&#160;Separate cultures
          </a>
          <a class="page-next" href="case_id_43_id_471.html" title="Go to next page">
-          Timing? Competition? »
+          Timing? Competition?&#160;&#187;
          </a>
         </div>
        </div>
@@ -515,32 +515,32 @@ div.Section1
       <ul class="menu">
        <li class="leaf">
         <a href="case_id_43_id_125_c_bio.html">
-         Alberto Ibargüen
+         Alberto Ibarg&uuml;en
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_126_c_bio.html">
-         Humberto Castelló
+         Humberto Castell&oacute;
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_127_c_bio.html">
-         Howard Weaver
+         Howard Weaver
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_128_c_bio.html">
-         Oscar Corral
+         Oscar Corral
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_129_c_bio.html">
-         Wilfredo Cancio Isla
+         Wilfredo Cancio Isla
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_130_c_bio.html">
-         Tom Fiedler
+         Tom Fiedler
         </a>
        </li>
       </ul>
