--- a/casestudies/43/casestudy/www/layout/case_id_43_id_476.html
+++ b/casestudies/43/casestudy/www/layout/case_id_43_id_476.html
@@ -2,9 +2,9 @@
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
  <head>
   <title>
-   McClatchy meets Miami | When the story is us: Miami Herald, Nuevo Herald and Radio Martí
+   McClatchy meets Miami | When the story is us: Miami Herald, Nuevo Herald and Radio Mart&iacute;
   </title>
-  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
    <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
    <style media="all" type="text/css">
     @import "css_global/book/book.css";
@@ -140,7 +140,7 @@ font-style:italic;
           <i>
            Herald
           </i>
-          s—brief history
+          s' brief history
          </a>
         </li>
         <li class="leaf">
@@ -165,7 +165,7 @@ font-style:italic;
         </li>
         <li class="collapsed">
          <a href="case_id_43_id_472.html">
-          Notification—Sept. 7
+          Notification' Sept. 7
          </a>
         </li>
         <li class="leaf">
@@ -360,7 +360,7 @@ div.Section1
          </meta>
         </p>
         <p>
-         The first the McClatchy Company—which had acquired the Miami Herald Media Company only three months earlier—knew of the firestorm at its premier property was after TMH published Corral’s article. McClatchy had owned newspapers as far back as 1857, when James McClatchy helped found the
+         The first the McClatchy Company' which had acquired the Miami Herald Media Company only three months earlier' knew of the firestorm at its premier property was after TMH published Corral's article. McClatchy had owned newspapers as far back as 1857, when James McClatchy helped found the
          <i>
           Sacramento Bee
          </i>
@@ -396,7 +396,7 @@ div.Section1
          <a href="case_id_43_id_127_c_bio.html">
           Howard Weaver
          </a>
-         addressed the staffs of both papers. Nuevo Herald editor Castelló remembers the day:
+         addressed the staffs of both papers. Nuevo Herald editor Castell&oacute; remembers the day:
         </p>
         <blockquote>
          <p>
@@ -409,7 +409,7 @@ div.Section1
            Howard Weaver.
           </i>
          </b>
-         In 2006, McClatchy’s vice president for news was a veteran journalist. Weaver had led his hometown paper, the Anchorage Daily News, to two Pulitzers, one in 1976 (when he was 25) and the second in 1989, when he was editor. The News was a McClatchy paper, and the corporation tapped Weaver as a new media expert in 1995. He subsequently became editorial page editor for the Bee, and in 2001 returned to headquarters as vice president-news. Editors at McClatchy papers did not report to him, but they did talk to him. Weaver characterizes his job as “part quality control and part evangelism.”
+         In 2006, McClatchy's vice president for news was a veteran journalist. Weaver had led his hometown paper, the Anchorage Daily News, to two Pulitzers, one in 1976 (when he was 25) and the second in 1989, when he was editor. The News was a McClatchy paper, and the corporation tapped Weaver as a new media expert in 1995. He subsequently became editorial page editor for the Bee, and in 2001 returned to headquarters as vice president-news. Editors at McClatchy papers did not report to him, but they did talk to him. Weaver characterizes his job as "part quality control and part evangelism."
          <a href="case_id_43_id_476.html#_ftn2" name="_ftnref2" title="">
          </a>
          <a href="case_id_43_id_476.html#_ftn2" name="_ftnref2" title="">
@@ -426,21 +426,21 @@ div.Section1
         </p>
         <blockquote>
          <p>
-          Your job is to explain the corporation to the editors, and explain the editors to the corporation… I became the champion of journalistic values in the company.
+          Your job is to explain the corporation to the editors, and explain the editors to the corporationÂ… I became the champion of journalistic values in the company.
          </p>
         </blockquote>
         <p>
-         He did not expect to hear from individual newspapers about stories they covered. “Once in a while I would hear from editors in advance just to say, ‘I want to give you a heads-up that we’re doing this thing and it’s going to be controversial.’ But usually not even that… They didn’t ask permission. We didn’t clear things.” Weaver recalls that when McClatchy acquired the Miami Herald Media Company, it knew little about the two newsrooms. “We have a traditional policy of lots of local autonomy at our papers, so we didn’t anticipate a great deal of needing to know the intricacies of balance between the two newsrooms, or the two communities, or anything like that,” he notes. Weaver himself had never been to Miami until he visited with Pruitt.
+         He did not expect to hear from individual newspapers about stories they covered. "Once in a while I would hear from editors in advance just to say, Â‘I want to give you a heads-up that we're doing this thing and it's going to be controversial.' But usually not even thatÂ… They didn't ask permission. We didn't clear things." Weaver recalls that when McClatchy acquired the Miami Herald Media Company, it knew little about the two newsrooms. "We have a traditional policy of lots of local autonomy at our papers, so we didn't anticipate a great deal of needing to know the intricacies of balance between the two newsrooms, or the two communities, or anything like that," he notes. Weaver himself had never been to Miami until he visited with Pruitt.
         </p>
         <p>
-         Weaver called ENH Editor Castelló on the Monday morning after the Corral story ran. Weaver called because “there were immediate repercussions in the sense of community concern, grousing within the building, hurt feelings.” Unfortunately, Castelló could not take the call because his mother had had a heart attack, and he was with her in the hospital. A couple of days later, Weaver emailed Castelló with good wishes for his mother, and asked him to return the phone call only when he was able. “A very candid, and very good person,” Castelló terms Weaver.
+         Weaver called ENH Editor Castell&oacute; on the Monday morning after the Corral story ran. Weaver called because "there were immediate repercussions in the sense of community concern, grousing within the building, hurt feelings." Unfortunately, Castell&oacute; could not take the call because his mother had had a heart attack, and he was with her in the hospital. A couple of days later, Weaver emailed Castell&oacute; with good wishes for his mother, and asked him to return the phone call only when he was able. "A very candid, and very good person," Castell&oacute; terms Weaver.
         </p>
         <p>
-         Weaver also contacted Fiedler: “I was trying to talk to them as quickly as I could… [to say] ‘I want to find out about this. This is blowing up. What’s happening?’” While he had experienced no exact parallel situation, Weaver was an old hand at stories that caused advertisers or readers to cancel. “I understand that when there’s a big community blowup over something, you need to get your ducks in a row,” he says, to determine “was it journalistically sound?”
+         Weaver also contacted Fiedler: "I was trying to talk to them as quickly as I couldÂ… [to say] Â‘I want to find out about this. This is blowing up. What's happening?'" While he had experienced no exact parallel situation, Weaver was an old hand at stories that caused advertisers or readers to cancel. "I understand that when there's a big community blowup over something, you need to get your ducks in a row," he says, to determine "was it journalistically sound?"
         </p>
         <blockquote>
          <p>
-          That’s what I started out to do, to get my arms around the thing so I could presumably defend the editorial integrity in the process: Yes, it was a legitimate story. Yes, we got the facts right.
+          That's what I started out to do, to get my arms around the thing so I could presumably defend the editorial integrity in the process: Yes, it was a legitimate story. Yes, we got the facts right.
          </p>
         </blockquote>
         <p>
@@ -454,14 +454,14 @@ div.Section1
          </i>
         </p>
         <p>
-         After his inquiries, Weaver was satisfied with the journalism. “Do I think it was a newsworthy story?” he says. “Yes. Do I think the fact that it was their sister publication should have stopped them? No, I don’t.” While he might have handled parts of the publication process differently, he adds, “I’m not in the second-guessing business, because I’ve been an editor and I know how many decisions you make quickly, and these are all good people as near as I can tell. Certainly Tom [Fiedler] and Humberto [Castelló] whom I know best out of this group are both fine people.”
+         After his inquiries, Weaver was satisfied with the journalism. "Do I think it was a newsworthy story?" he says. "Yes. Do I think the fact that it was their sister publication should have stopped them? No, I don't." While he might have handled parts of the publication process differently, he adds, "I'm not in the second-guessing business, because I've been an editor and I know how many decisions you make quickly, and these are all good people as near as I can tell. Certainly Tom [Fiedler] and Humberto [Castell&oacute;] whom I know best out of this group are both fine people."
         </p>
         <p>
-         For his part, Weaver expected the distress to subside: “When I heard about this for the first time, I presumed that the kind of factual and procedural things would work out… I thought we had some time.” He adds that “it was not an unusual situation for somebody to be pissed off at a story that appeared in one of our papers. That happened all the time. This time, it just happened to be people that worked for us.” After 40 years in the journalism business, Weaver thought he knew the process.
+         For his part, Weaver expected the distress to subside: "When I heard about this for the first time, I presumed that the kind of factual and procedural things would work outÂ… I thought we had some time." He adds that "it was not an unusual situation for somebody to be pissed off at a story that appeared in one of our papers. That happened all the time. This time, it just happened to be people that worked for us." After 40 years in the journalism business, Weaver thought he knew the process.
         </p>
         <blockquote>
          <p>
-          I’d been through a lot of firestorms. Created a few of them, and been through some others as a leader. So I felt confident that we would be able to get in there, sort out what the right and wrong was in the journalism to make a decision about whether it was fair, and what the next steps were.
+          I'd been through a lot of firestorms. Created a few of them, and been through some others as a leader. So I felt confident that we would be able to get in there, sort out what the right and wrong was in the journalism to make a decision about whether it was fair, and what the next steps were.
          </p>
         </blockquote>
         <p>
@@ -500,7 +500,7 @@ div.Section1
             </a>
            </span>
            <span style="font-size: smaller;">
-            Author’s interview with Howard Weaver. April 27, 2009, in New York   City. All further quotes from Weaver, unless otherwise attributed, are from this interview.
+            Author's interview with Howard Weaver. April 27, 2009, in New York   City. All further quotes from Weaver, unless otherwise attributed, are from this interview.
            </span>
           </p>
          </div>
@@ -520,7 +520,7 @@ div.Section1
           campaign
          </a>
          <a class="page-next" href="case_id_43_id_477.html" title="Go to next page">
-          Hiassen episode »
+          Hiassen episode&#160;&#187;
          </a>
         </div>
        </div>
@@ -540,32 +540,32 @@ div.Section1
       <ul class="menu">
        <li class="leaf">
         <a href="case_id_43_id_125_c_bio.html">
-         Alberto Ibargüen
+         Alberto Ibarg&uuml;en
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_126_c_bio.html">
-         Humberto Castelló
+         Humberto Castell&oacute;
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_127_c_bio.html">
-         Howard Weaver
+         Howard Weaver
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_128_c_bio.html">
-         Oscar Corral
+         Oscar Corral
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_129_c_bio.html">
-         Wilfredo Cancio Isla
+         Wilfredo Cancio Isla
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_130_c_bio.html">
-         Tom Fiedler
+         Tom Fiedler
         </a>
        </li>
       </ul>
