--- a/casestudies/43/casestudy/www/layout/case_id_43_id_501_pid_472.html
+++ b/casestudies/43/casestudy/www/layout/case_id_43_id_501_pid_472.html
@@ -2,9 +2,9 @@
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
  <head>
   <title>
-   Castelló's account | When the story is us: Miami Herald, Nuevo Herald and Radio Martí
+   Castell&oacute;'s account | When the story is us: Miami Herald, Nuevo Herald and Radio Mart&iacute;
   </title>
-  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
    <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
    <style media="all" type="text/css">
     @import "css_global/book/book.css";
@@ -99,7 +99,7 @@ font-style:italic;
        <h1 class="site-name">
         <a href="case_id_43.html" title="Home">
          <span>
-          Castelló's account
+          Castell&oacute;'s account
          </span>
         </a>
        </h1>
@@ -140,12 +140,12 @@ font-style:italic;
           <i>
            Herald
           </i>
-          s—brief history
+          s' brief history
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_43_id_468.html">
-          Castañeda era
+          Casta&ntilde;eda era
          </a>
         </li>
         <li class="leaf">
@@ -165,7 +165,7 @@ font-style:italic;
         </li>
         <li class="expanded">
          <a href="case_id_43_id_472.html">
-          Notification—Sept. 7
+          Notification' Sept. 7
          </a>
          <ul class="menu">
           <li class="leaf">
@@ -180,7 +180,7 @@ font-style:italic;
           </li>
           <li class="leaf">
            <a class="active" href="case_id_43_id_501_pid_472.html">
-            Castelló's account
+            Castell&oacute;'s account
            </a>
           </li>
           <li class="leaf">
@@ -257,11 +257,11 @@ font-style:italic;
        </a>
        »
        <a href="case_id_43_id_472.html">
-        Notification—Sept. 7
+        Notification' Sept. 7
        </a>
       </div>
       <h1 class="title">
-       Castelló's account
+       Castell&oacute;'s account
       </h1>
       <div class="tabs">
       </div>
@@ -273,11 +273,11 @@ font-style:italic;
          <img alt="" src="../../files/photos/385/Castello office.jpg"/>
          <br/>
          <p class="caption">
-          Castelló's office
+          Castell&oacute;'s office
          </p>
         </div>
         <p>
-         As Castelló remembers September 7, he returned from lunch at 2:30 p.m. to find Editors Garcia and Marquez in his waiting room. He invited them into his office, but they waited for Corral to arrive, then asked to speak with Castelló “privately, in your office. Then I felt something strange, something weird,” recalls Castelló.
+         As Castell&oacute; remembers September 7, he returned from lunch at 2:30 p.m. to find Editors Garcia and Marquez in his waiting room. He invited them into his office, but they waited for Corral to arrive, then asked to speak with Castell&oacute; "privately, in your office. Then I felt something strange, something weird," recalls Castell&oacute;.
          <a href="case_id_43_id_501_pid_472.html#_ftn5" name="_ftnref5" title="">
           <span>
            <span>
@@ -293,21 +293,21 @@ font-style:italic;
          <i>
           Nuevo Herald
          </i>
-         editor prided himself on an open-door policy, and was angry when the visitors closed the door to his office. At the same time, he says, Corral “turned on a tape recorder, and they go, ‘we have to tell you something: that we are working on a story and we want your reaction.’”
+         editor prided himself on an open-door policy, and was angry when the visitors closed the door to his office. At the same time, he says, Corral "turned on a tape recorder, and they go, Â‘we have to tell you something: that we are working on a story and we want your reaction.'"
         </p>
         <p>
-         Castelló protested first at the closed doors, then at the tape recorder. “Hey guys, are you crazy? You cannot talk to me that way… What’s happening here?” he asked. When he understood what they wanted, he asked them to leave. “I will talk to the publisher… but the way that you are conducting this investigation is not the proper way. And you are being disrespectful to me,” he added. He insisted that he had not known the
+         Castell&oacute; protested first at the closed doors, then at the tape recorder. "Hey guys, are you crazy? You cannot talk to me that wayÂ… What's happening here?" he asked. When he understood what they wanted, he asked them to leave. "I will talk to the publisherÂ… but the way that you are conducting this investigation is not the proper way. And you are being disrespectful to me," he added. He insisted that he had not known the
          <i>
           Nuevo Herald
          </i>
-         reporters were being paid for their work at Radio Martí.
+         reporters were being paid for their work at Radio Mart&iacute;.
         </p>
         <p>
          <i>
           Listen to
          </i>
          <i>
-          Castelló
+          Castell&oacute;
          </i>
          <i>
           on the interview.
@@ -317,14 +317,14 @@ font-style:italic;
          <audio controls><source src="../../files/audios/98/Castello&#32;text.mp3" type="audio/mpeg"></audio>
         </p>
         <p>
-         Castelló tried immediately to call Publisher Díaz, who was out of town, but could not reach him for two hours. When the two finally spoke, Díaz confirmed that he knew about the
+         Castell&oacute; tried immediately to call Publisher D&iacute;az, who was out of town, but could not reach him for two hours. When the two finally spoke, D&iacute;az confirmed that he knew about the
          <i>
           Miami Herald
          </i>
-         story, which further dismayed Castelló. “It was unbelievable that the publisher didn’t inform me,” he says. Díaz suggested a conference call with Elissa Vanaver, vice president for human resources, and Robert Beatty, the company lawyer.
+         story, which further dismayed Castell&oacute;. "It was unbelievable that the publisher didn't inform me," he says. D&iacute;az suggested a conference call with Elissa Vanaver, vice president for human resources, and Robert Beatty, the company lawyer.
         </p>
         <p>
-         The conference call convened about 5 p.m., and Díaz announced that he intended to fire the three
+         The conference call convened about 5 p.m., and D&iacute;az announced that he intended to fire the three
          <i>
           Nuevo Herald
          </i>
@@ -340,11 +340,11 @@ font-style:italic;
            </span>
           </span>
          </a>
-         Castelló protested: “Jesús, we have to investigate this first… We should separate them [put on leave], interview them, investigate them, and not publish this story today.” Beatty agreed. Díaz, however, countered that the
+         Castell&oacute; protested: "Jes&uacute;s, we have to investigate this firstÂ… We should separate them [put on leave], interview them, investigate them, and not publish this story today." Beatty agreed. D&iacute;az, however, countered that the
          <i>
           Miami Herald
          </i>
-         could not delay publication. “No one could change his mind. ‘No, they are out. And the story runs today,’” recalls Castelló. Under protest, Castelló agreed to fire the reporters.
+         could not delay publication. "No one could change his mind. Â‘No, they are out. And the story runs today,'" recalls Castell&oacute;. Under protest, Castell&oacute; agreed to fire the reporters.
         </p>
         <p>
          <b>
@@ -352,7 +352,7 @@ font-style:italic;
            DeFede redux?
           </i>
          </b>
-         Once in the hallway, Castelló—who considered Díaz a friend—called him back on his cellphone. Castelló worried that Díaz was making a mistake, as Castelló felt he had in endorsing the dismissal of a
+         Once in the hallway, Castell&oacute;who considered D&iacute;az a friend' called him back on his cellphone. Castell&oacute; worried that D&iacute;az was making a mistake, as Castell&oacute; felt he had in endorsing the dismissal of a
          <i>
           Miami Herald
          </i>
@@ -360,25 +360,25 @@ font-style:italic;
          <i>
           Miami Herald
          </i>
-         , dropped off a stack of papers, pulled out a gun and shot himself. After the suicide, columnist Jim DeFede came forward with the tape recording of a conversation he had had with Teele only hours before. He thought it could be helpful to investigators. But taping without the subject’s permission, which DeFede had done, was against
+         , dropped off a stack of papers, pulled out a gun and shot himself. After the suicide, columnist Jim DeFede came forward with the tape recording of a conversation he had had with Teele only hours before. He thought it could be helpful to investigators. But taping without the subject's permission, which DeFede had done, was against
          <i>
           Herald
          </i>
-         policy as well as Florida law. Díaz had become publisher only 11 days earlier, on July 16. Fiedler conferred with Díaz and, the next day, fired DeFede. Many in the newsroom disagreed heatedly with the decision; some 200 current and former staff in vain signed a petition to reinstate him.
+         policy as well as Florida law. D&iacute;az had become publisher only 11 days earlier, on July 16. Fiedler conferred with D&iacute;az and, the next day, fired DeFede. Many in the newsroom disagreed heatedly with the decision; some 200 current and former staff in vain signed a petition to reinstate him.
         </p>
         <p>
-         But when Castelló reached him, Díaz was adamant, saying “if the story’s being published, we cannot have those guys in-house,” recalls Castelló. So towards 6 p.m. Castelló, with HR Vice President Vanaver present, in turn told Alfonso and Cancio they were fired. Connor was informed that her freelance arrangement with the paper was terminated. The reporters insisted that they had permission from the previous editor, Castañeda. That made no difference to the decision.
+         But when Castell&oacute; reached him, D&iacute;az was adamant, saying "if the story's being published, we cannot have those guys in-house," recalls Castell&oacute;. So towards 6 p.m. Castell&oacute;, with HR Vice President Vanaver present, in turn told Alfonso and Cancio they were fired. Connor was informed that her freelance arrangement with the paper was terminated. The reporters insisted that they had permission from the previous editor, Casta&ntilde;eda. That made no difference to the decision.
         </p>
         <p>
-         During a second conference call that evening with Díaz, Beatty and Vanaver, Castelló made one last plea, to no avail. Castelló could not understand why, if the reporters had permission, they should be fired. Nor did he object to their work for Radio/TV Martí. “Probably if they had asked me for permission, I would have said yes,” comments Castelló.
+         During a second conference call that evening with D&iacute;az, Beatty and Vanaver, Castell&oacute; made one last plea, to no avail. Castell&oacute; could not understand why, if the reporters had permission, they should be fired. Nor did he object to their work for Radio/TV Mart&iacute;. "Probably if they had asked me for permission, I would have said yes," comments Castell&oacute;.
         </p>
         <blockquote>
          <p>
-          Why? Because we didn’t see that as a way to create propaganda, number one. And not one of them was doing propaganda… If there is a [US government] policy that you have to be paid for [appearances], that is not a problem.
+          Why? Because we didn't see that as a way to create propaganda, number one. And not one of them was doing propagandaÂ… If there is a [US government] policy that you have to be paid for [appearances], that is not a problem.
          </p>
         </blockquote>
         <p>
-         Castelló was particularly disturbed that TMH editors had given his reporters virtually no advance notice about the story. If the editors, he says, “think that its sister publication is involved in or practicing something that they consider is not the best, why don’t they tell us? Why not talk to the editor? Why not talk to the publisher? We consider that is not proper conduct. Behind that, there is always witch hunting and racism.”
+         Castell&oacute; was particularly disturbed that TMH editors had given his reporters virtually no advance notice about the story. If the editors, he says, "think that its sister publication is involved in or practicing something that they consider is not the best, why don't they tell us? Why not talk to the editor? Why not talk to the publisher? We consider that is not proper conduct. Behind that, there is always witch hunting and racism."
         </p>
         <div>
          <br clear="all"/>
@@ -395,7 +395,7 @@ font-style:italic;
             </a>
            </span>
            <span style="font-size: smaller;">
-            Author’s interview with Humberto Castelló on April 13, 2009, in Miami. All further quotes from Castelló, unless otherwise attributed, are from this interview.
+            Author's interview with Humberto Castell&oacute; on April 13, 2009, in Miami. All further quotes from Castell&oacute;, unless otherwise attributed, are from this interview.
            </span>
           </p>
          </div>
@@ -413,7 +413,7 @@ font-style:italic;
             </a>
            </span>
            <span style="font-size: smaller;">
-            Jesús Díaz failed to respond to repeated efforts to interview him for this case study.
+            Jes&uacute;s D&iacute;az failed to respond to repeated efforts to interview him for this case study.
            </span>
           </p>
          </div>
@@ -422,10 +422,10 @@ font-style:italic;
        <div class="book-navigation" style="clear:both">
         <div class="page-links clear-block">
          <a class="page-previous" href="case_id_43_id_500_pid_472.html" title="Go to previous page">
-          « Fiedler's account
+          &#171;&#160;Fiedler's account
          </a>
          <a class="page-next" href="case_id_43_id_502_pid_472.html" title="Go to next page">
-          Cancio's account »
+          Cancio's account&#160;&#187;
          </a>
         </div>
        </div>
@@ -445,32 +445,32 @@ font-style:italic;
       <ul class="menu">
        <li class="leaf">
         <a href="case_id_43_id_125_c_bio.html">
-         Alberto Ibargüen
+         Alberto Ibarg&uuml;en
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_126_c_bio.html">
-         Humberto Castelló
+         Humberto Castell&oacute;
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_127_c_bio.html">
-         Howard Weaver
+         Howard Weaver
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_128_c_bio.html">
-         Oscar Corral
+         Oscar Corral
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_129_c_bio.html">
-         Wilfredo Cancio Isla
+         Wilfredo Cancio Isla
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_130_c_bio.html">
-         Tom Fiedler
+         Tom Fiedler
         </a>
        </li>
       </ul>
