--- a/casestudies/87/casestudy/www/layout/case_id_87_id_693.html
+++ b/casestudies/87/casestudy/www/layout/case_id_87_id_693.html
@@ -4,7 +4,7 @@
   <title>
    Observational Study Launches | When BEST Intentions Go Awry: Arsenic Mitigation in Bangladesh
   </title>
-  <meta content="text/html; charset=cp1252" http-equiv="Content-Type"/>
+  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type"/>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
   <style media="all" type="text/css">
    @import "css_global/book/book.css";
