--- a/casestudies/131/casestudy/www/layout/case_id_131_id_939.html
+++ b/casestudies/131/casestudy/www/layout/case_id_131_id_939.html
@@ -5,12 +5,12 @@
 
 
 <head>
-  <title>Introduction | Tortoise or Hare? Fundación Carvajal and Buenaventura
+  <title>Introduction | Tortoise or Hare? FundaciÃ³n Carvajal and Buenaventura
 	- A Journalism Case Study
 
   </title>
  
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 
@@ -142,7 +142,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  href="case_id_131_id_940.html">Fundación Carvajal—brief history </a>
+<li class="leaf"><a  href="case_id_131_id_940.html">FundaciÃ³n Carvajalâ€”brief history </a>
 
 
 
@@ -292,9 +292,9 @@ font-style:italic;
 <div class="book-navigation" style="clear:both"><div class="page-links clear-block">
 
 
-<a href="case_id_131.html" class="page-previous" title="Go to previous page">&#171;&#160;Tortoise or Hare? Fundación Carvajal and Buenaventura</a>
+<a href="case_id_131.html" class="page-previous" title="Go to previous page">&#171;&#160;Tortoise or Hare? FundaciÃ³n Carvajal and Buenaventura</a>
 
-<a href="case_id_131_id_940.html" class="page-next" title="Go to next page">Fundación Carvajal—brief history&#160;&#187;</a>
+<a href="case_id_131_id_940.html" class="page-next" title="Go to next page">FundaciÃ³n Carvajalâ€”brief history&#160;&#187;</a>
 
 </div>
 </div></div>
@@ -313,11 +313,11 @@ font-style:italic;
 
 <li class="leaf"><a  href="case_id_131_id_279_c_bio.html">Roberto&nbsp;Pizarro</a></li>
 
-<li class="leaf"><a  href="case_id_131_id_280_c_bio.html">Idalia&nbsp;Tunubalá</a></li>
+<li class="leaf"><a  href="case_id_131_id_280_c_bio.html">Idalia&nbsp;TunubalÃ¡</a></li>
 
 <li class="leaf"><a  href="case_id_131_id_281_c_bio.html">Juan Diego&nbsp;Saa</a></li>
 
-<li class="leaf"><a  href="case_id_131_id_282_c_bio.html">Miriam&nbsp;Gómez</a></li>
+<li class="leaf"><a  href="case_id_131_id_282_c_bio.html">Miriam&nbsp;GÃ³mez</a></li>
 
 
 </ul>
