--- a/casestudies/131/casestudy/www/layout/case_id_131_id_940.html
+++ b/casestudies/131/casestudy/www/layout/case_id_131_id_940.html
@@ -5,12 +5,12 @@
 
 
 <head>
-  <title>Fundación Carvajal—brief history | Tortoise or Hare? Fundación Carvajal and Buenaventura
+  <title>FundaciÃ³n Carvajalâ€”brief history | Tortoise or Hare? FundaciÃ³n Carvajal and Buenaventura
 	- A Journalism Case Study
 
   </title>
  
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 
@@ -94,7 +94,7 @@ font-style:italic;
 <table border="0" cellspacing="0" cellpadding="0">
 	<tr>
 		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_131.html" title="Home"><span>Fundación Carvajal—brief history</span></a></h1>						</td>
+		<h1 class='site-name'><a href="case_id_131.html" title="Home"><span>FundaciÃ³n Carvajalâ€”brief history</span></a></h1>						</td>
 		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
 	</tr>
 
@@ -142,7 +142,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  class="active"  href="case_id_131_id_940.html">Fundación Carvajal—brief history </a>
+<li class="leaf"><a  class="active"  href="case_id_131_id_940.html">FundaciÃ³n Carvajalâ€”brief history </a>
 
 
 
@@ -254,7 +254,7 @@ font-style:italic;
 		
 		
 		</div>		
-		<h1 class="title">Fundación Carvajal—brief history</h1>
+		<h1 class="title">FundaciÃ³n Carvajalâ€”brief history</h1>
 		
 		
 		
@@ -317,11 +317,11 @@ font-style:italic;
 
 <li class="leaf"><a  href="case_id_131_id_279_c_bio.html">Roberto&nbsp;Pizarro</a></li>
 
-<li class="leaf"><a  href="case_id_131_id_280_c_bio.html">Idalia&nbsp;Tunubalá</a></li>
+<li class="leaf"><a  href="case_id_131_id_280_c_bio.html">Idalia&nbsp;TunubalÃ¡</a></li>
 
 <li class="leaf"><a  href="case_id_131_id_281_c_bio.html">Juan Diego&nbsp;Saa</a></li>
 
-<li class="leaf"><a  href="case_id_131_id_282_c_bio.html">Miriam&nbsp;Gómez</a></li>
+<li class="leaf"><a  href="case_id_131_id_282_c_bio.html">Miriam&nbsp;GÃ³mez</a></li>
 
 
 </ul>
