--- a/casestudies/43/casestudy/www/layout/case_id_43_id_467.html
+++ b/casestudies/43/casestudy/www/layout/case_id_43_id_467.html
@@ -8,7 +8,7 @@
   <title>The two Heralds&#8212;brief history | When the story is us: Miami Herald, Nuevo Herald and Radio Mart&iacute;
   </title>
  
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 
@@ -149,7 +149,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  href="case_id_43_id_468.html">Castañeda era</a>
+<li class="leaf"><a  href="case_id_43_id_468.html">CastaÃ±eda era</a>
 
 
 
@@ -416,7 +416,7 @@ div.Section1
 
 <a href="case_id_43_id_466.html" class="page-previous" title="Go to previous page">&#171;&#160;Introduction</a>
 
-<a href="case_id_43_id_468.html" class="page-next" title="Go to next page">Castañeda era&#160;&#187;</a>
+<a href="case_id_43_id_468.html" class="page-next" title="Go to next page">CastaÃ±eda era&#160;&#187;</a>
 
 </div>
 </div></div>
@@ -431,9 +431,9 @@ div.Section1
     <div class="content">
 <ul class="menu">
 
-<li class="leaf"><a  href="case_id_43_id_125_c_bio.html">Alberto&nbsp;Ibargüen</a></li>
+<li class="leaf"><a  href="case_id_43_id_125_c_bio.html">Alberto&nbsp;IbargÃ¼en</a></li>
 
-<li class="leaf"><a  href="case_id_43_id_126_c_bio.html">Humberto&nbsp;Castelló</a></li>
+<li class="leaf"><a  href="case_id_43_id_126_c_bio.html">Humberto&nbsp;CastellÃ³</a></li>
 
 <li class="leaf"><a  href="case_id_43_id_127_c_bio.html">Howard&nbsp;Weaver</a></li>
 
