--- a/casestudies/43/casestudy/www/layout/case_id_43_id_472.html
+++ b/casestudies/43/casestudy/www/layout/case_id_43_id_472.html
@@ -8,7 +8,7 @@
   <title>Notification&#8212;Sept. 7 | When the story is us: Miami Herald, Nuevo Herald and Radio Mart&iacute;
   </title>
  
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 
@@ -149,7 +149,7 @@ font-style:italic;
 </li>
 
 
-<li class="leaf"><a  href="case_id_43_id_468.html">Castañeda era</a>
+<li class="leaf"><a  href="case_id_43_id_468.html">Casta&ntilde;eda era</a>
 
 
 
@@ -459,9 +459,9 @@ div.Section1
     <div class="content">
 <ul class="menu">
 
-<li class="leaf"><a  href="case_id_43_id_125_c_bio.html">Alberto&nbsp;Ibargüen</a></li>
+<li class="leaf"><a  href="case_id_43_id_125_c_bio.html">Alberto&nbsp;Ibarg&uuml;en</a></li>
 
-<li class="leaf"><a  href="case_id_43_id_126_c_bio.html">Humberto&nbsp;Castelló</a></li>
+<li class="leaf"><a  href="case_id_43_id_126_c_bio.html">Humberto&nbsp;Castell&oacute;</a></li>
 
 <li class="leaf"><a  href="case_id_43_id_127_c_bio.html">Howard&nbsp;Weaver</a></li>
 
