--- a/casestudies/43/casestudy/www/layout/case_id_43_id_502_pid_472.html
+++ b/casestudies/43/casestudy/www/layout/case_id_43_id_502_pid_472.html
@@ -2,9 +2,9 @@
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
  <head>
   <title>
-   Cancio's account | When the story is us: Miami Herald, Nuevo Herald and Radio Martí
+   Cancio's account | When the story is us: Miami Herald, Nuevo Herald and Radio Mart&iacute;
   </title>
-  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
    <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
    <style media="all" type="text/css">
     @import "css_global/book/book.css";
@@ -140,12 +140,12 @@ font-style:italic;
           <i>
            Herald
           </i>
-          s—brief history
+          s' brief history
          </a>
         </li>
         <li class="leaf">
          <a href="case_id_43_id_468.html">
-          Castañeda era
+          Casta&ntilde;eda era
          </a>
         </li>
         <li class="leaf">
@@ -165,7 +165,7 @@ font-style:italic;
         </li>
         <li class="expanded">
          <a href="case_id_43_id_472.html">
-          Notification—Sept. 7
+          Notification' Sept. 7
          </a>
          <ul class="menu">
           <li class="leaf">
@@ -180,7 +180,7 @@ font-style:italic;
           </li>
           <li class="leaf">
            <a href="case_id_43_id_501_pid_472.html">
-            Castelló's account
+            Castell&oacute;'s account
            </a>
           </li>
           <li class="leaf">
@@ -257,7 +257,7 @@ font-style:italic;
        </a>
        »
        <a href="case_id_43_id_472.html">
-        Notification—Sept. 7
+        Notification' Sept. 7
        </a>
       </div>
       <h1 class="title">
@@ -277,7 +277,7 @@ font-style:italic;
          <i>
           Miami Herald
          </i>
-         editors enter Castelló’s office and close the door. “This was not usual,” he comments.
+         editors enter Castell&oacute;’s office and close the door. "This was not usual," he comments.
          <a href="case_id_43_id_502_pid_472.html#_ftn7" name="_ftnref7" title="">
           <span>
            <span>
@@ -289,7 +289,7 @@ font-style:italic;
            </span>
           </span>
          </a>
-         At about 4 p.m., HR VP Vanaver summoned Cancio to her office. Castelló was there as well. Vanaver told Cancio that he had been terminated. “I was very furious with this meeting. But I’m trying to be a decent person. And I was also surprised, of course,” says Cancio. Castelló was, recalls Cancio, “very emotional… He told me at that time ‘you are the best reporter that I work with in years, and you are a very dedicated person.’ He cried.”
+         At about 4 p.m., HR VP Vanaver summoned Cancio to her office. Castell&oacute; was there as well. Vanaver told Cancio that he had been terminated. "I was very furious with this meeting. But I'm trying to be a decent person. And I was also surprised, of course," says Cancio. Castell&oacute; was, recalls Cancio, "very emotionalÂ… He told me at that time Â‘you are the best reporter that I work with in years, and you are a very dedicated person.' He cried."
         </p>
         <p>
          <i>
@@ -300,26 +300,26 @@ font-style:italic;
          <audio controls><source src="../../files/audios/99/Cancio&#32;text.mp3" type="audio/mpeg"></audio>
         </p>
         <p>
-         Since December 1998, Cancio had been a full-time staff member at ENH, where he reported on Cuban exile affairs and politics. He had defected to the US in 1994 while in the country on a MacArthur Foundation fellowship from Havana University, where he worked for 12 years as a professor of communications. As Cancio explained to Castelló, he had first worked for Radio Martí in 2000 as part of a discussion panel. In 2001, the broadcaster engaged Cancio for 20 minutes a week to discuss films on a new program,
+         Since December 1998, Cancio had been a full-time staff member at ENH, where he reported on Cuban exile affairs and politics. He had defected to the US in 1994 while in the country on a MacArthur Foundation fellowship from Havana University, where he worked for 12 years as a professor of communications. As Cancio explained to Castell&oacute;, he had first worked for Radio Mart&iacute; in 2000 as part of a discussion panel. In 2001, the broadcaster engaged Cancio for 20 minutes a week to discuss films on a new program,
          <i>
           Commentarios
          </i>
-         . Cancio went to then-ENH Editor Castañeda for approval, which was granted. “I didn’t receive official written authorization,” says Cancio, “but I assumed that it was absolutely legal” because a number of journalists at
+         . Cancio went to then-ENH Editor Casta&ntilde;eda for approval, which was granted. "I didn't receive official written authorization," says Cancio, "but I assumed that it was absolutely legal" because a number of journalists at
          <i>
           Nuevo Herald
          </i>
-         had worked at Radio/TV Martí since the station’s founding in 1985. “The collaboration didn’t change my thoughts,” says Cancio. “What I thought about Cuba didn’t change because I did some work at Radio Martí.”
+         had worked at Radio/TV Mart&iacute; since the station's founding in 1985. "The collaboration didn't change my thoughts," says Cancio. "What I thought about Cuba didn't change because I did some work at Radio Mart&iacute;."
         </p>
         <p>
          While Cancio was clearing out his desk to leave,
          <i>
           Miami Herald
          </i>
-         reporter Alfonso Chardy walked up looking for a reaction to Corral’s story. “No comment,” Cancio responded. Castelló announced the dismissals to the
+         reporter Alfonso Chardy walked up looking for a reaction to Corral's story. "No comment," Cancio responded. Castell&oacute; announced the dismissals to the
          <i>
           Nuevo Herald
          </i>
-         newsroom at about 7 p.m. “Nobody wanted to believe that,” says Cancio. “Some people were very upset with this at that time.” Over the next several weeks, Cancio continued to make no public statement, although he did talk to Castelló from time to time about the evolving situation.
+         newsroom at about 7 p.m. "Nobody wanted to believe that," says Cancio. "Some people were very upset with this at that time." Over the next several weeks, Cancio continued to make no public statement, although he did talk to Castell&oacute; from time to time about the evolving situation.
         </p>
         <div>
          <br clear="all"/>
@@ -336,7 +336,7 @@ font-style:italic;
             </a>
            </span>
            <span style="font-size: smaller;">
-            Author’s interview with Wilfredo Cancio Isla on May 21, 2009, in Miami. All further quotes from Cancio, unless otherwise attributed, are from this interview.
+            Author's interview with Wilfredo Cancio Isla on May 21, 2009, in Miami. All further quotes from Cancio, unless otherwise attributed, are from this interview.
            </span>
           </p>
          </div>
@@ -345,10 +345,10 @@ font-style:italic;
        <div class="book-navigation" style="clear:both">
         <div class="page-links clear-block">
          <a class="page-previous" href="case_id_43_id_501_pid_472.html" title="Go to previous page">
-          « Castelló's account
+          &#171;&#160;Castell&oacute;'s account
          </a>
          <a class="page-next" href="case_id_43_id_473.html" title="Go to next page">
-          Story goes to press »
+          Story goes to press&#160;&#187;
          </a>
         </div>
        </div>
@@ -368,32 +368,32 @@ font-style:italic;
       <ul class="menu">
        <li class="leaf">
         <a href="case_id_43_id_125_c_bio.html">
-         Alberto Ibargüen
+         Alberto Ibarg&uuml;en
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_126_c_bio.html">
-         Humberto Castelló
+         Humberto Castell&oacute;
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_127_c_bio.html">
-         Howard Weaver
+         Howard Weaver
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_128_c_bio.html">
-         Oscar Corral
+         Oscar Corral
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_129_c_bio.html">
-         Wilfredo Cancio Isla
+         Wilfredo Cancio Isla
         </a>
        </li>
        <li class="leaf">
         <a href="case_id_43_id_130_c_bio.html">
-         Tom Fiedler
+         Tom Fiedler
         </a>
        </li>
       </ul>
